# AntigravityAutoclicker

./: .env.example  .gitignore  README.md  antigravity_clicker.py  antigravity_clicker.pyw  config.json  index.html  launch.bat  package-lock.json  package.json  requirements.txt  scanner.js  vegaclick.py  vite.config.ts
backend/: __init__.py  agent_brain.py  autoclicker_service.py  chat_reader.py  llm_client.py  workspace_scanner.py
core/: antigravity_clicker.py  config.json
scratch/: agentic_chat_dom.html  allow_nodes.txt  antigravity_dom.html  apply_patch.py  apply_patch2.py  apply_patch3.py  apply_patch4.py  apply_patch5.py  ax_clicker_demo.py  ax_dump.json  ax_scanner.py  axtree.json  axtree_names.txt  axtree_prompt.json  button_dump.json  button_dump2.json  diag.py  diag3.py  dom_dump.html  dom_dump.txt  dom_dumper.py  dom_dumper2.py  dump_dom.py  dump_targets.py  list_targets.py  live_audit.json  live_audit.py  nodes.json  nodes.txt  nodes2.json  nodes3.json  nodes4.json  nodes5.json  num_nodes.txt  patch_worker.py  ports.txt  test.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  window_detect.rs
